--- a/views/mainsite.ejs
+++ b/views/mainsite.ejs
@@ -228,7 +228,7 @@
         </p>
         <p class="fs-5">
           <i class="fa-solid fa-clock"></i>
-          <span>Rund um die Uhr erreichbar</span>
+          <span>Rund um die Uhr erreichbar 100</span>
         </p>
       </div>
       </div>
